--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -23,13 +23,17 @@ jobs:
               repo: context.repo.repo,
               pull_number: context.payload.workflow_run.pull_requests[0].number,
             });
-            if (pr.data.title.startsWith('chore(deps-dev):') && pr.data.user.login === 'dependabot[bot]') {
+            if (!pr.data.title.startsWith('chore(deps-dev):')) {
+              console.log('Not Merged 🚫');
+              console.log(`Title === '${pr.data.title}'`);
+            } else if (pr.data.user.login !== 'dependabot[bot]') {
+              console.log('Not Merged 🚫');
+              console.log(`User === '${pr.data.user.login}'`);
+            } else {
               await github.pulls.merge({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 pull_number: context.payload.workflow_run.pull_requests[0].number,
               });
               console.log('Merged 🎉');
-            } else {
-              console.log('Not Merged 🚫');
             }
