--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "marked-linkify-it",
-  "version": "1.1.1",
-  "description": "marked extension to use linkify-it for autolinks",
+  "name": "marked-extension-template",
+  "version": "0.0.0",
+  "description": "marked extension template",
   "main": "src/index.js",
   "keywords": [
     "marked",
-    "linkify-it"
+    "extension"
   ],
   "scripts": {
     "test": "jest --verbose",
@@ -15,37 +15,35 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/UziTech/marked-linkify-it.git"
+    "url": "git+https://github.com/UziTech/marked-extension-template.git"
   },
   "author": "Tony Brix <Tony@Brix.ninja> (https://Tony.Brix.ninja)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/UziTech/marked-linkify-it/issues"
+    "url": "https://github.com/UziTech/marked-extension-template/issues"
   },
-  "homepage": "https://github.com/UziTech/marked-linkify-it#readme",
+  "homepage": "https://github.com/UziTech/marked-extension-template#readme",
   "peerDependencies": {
     "marked": "^1.0.0 || ^2.0.0"
   },
-  "dependencies": {
-    "linkify-it": "^3.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.1",
-    "@semantic-release/npm": "^7.1.1",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.2",
     "eslint": "^7.25.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-promise": "^5.1.0",
     "jest-cli": "^26.6.3",
     "marked": "^2.0.3",
-    "rollup": "^2.46.0",
-    "semantic-release": "^17.4.2"
+    "rollup": "^2.47.0",
+    "semantic-release": "^17.4.3"
   }
 }
