--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "marked-extension-template",
   "version": "0.0.0",
   "description": "marked extension template",
-  "main": "src/index.js",
+  "main": "./src/index.js",
+  "browser": "./lib/index.umd.js",
+  "type": "module",
   "keywords": [
     "marked",
     "extension"
@@ -11,7 +13,7 @@
     "test": "jest --verbose",
     "test:cover": "jest --coverage",
     "lint": "eslint .",
-    "build": "rollup -c rollup.config.esm.js"
+    "build": "rollup -c rollup.config.umd.js"
   },
   "repository": {
     "type": "git",
@@ -24,26 +26,28 @@
   },
   "homepage": "https://github.com/markedjs/marked-extension-template#readme",
   "peerDependencies": {
-    "marked": "^4.0.4"
+    "marked": "^4.0.5"
   },
-  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/commit-analyzer": "^9.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.2",
-    "@semantic-release/npm": "^8.0.2",
-    "@semantic-release/release-notes-generator": "^10.0.2",
+    "@semantic-release/npm": "^8.0.3",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "babel-jest": "^27.3.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
     "jest-cli": "^27.3.1",
-    "marked": "^4.0.4",
+    "marked": "^4.0.5",
     "rollup": "^2.60.1",
-    "semantic-release": "^18.0.0"
+    "semantic-release": "^18.0.1"
   }
 }
