--- a/package.json
+++ b/package.json
@@ -2,9 +2,20 @@
   "name": "marked-extension-template",
   "version": "0.0.0",
   "description": "marked extension template",
-  "main": "./src/index.js",
+  "main": "./lib/index.cjs",
+  "module": "./src/index.js",
   "browser": "./lib/index.umd.js",
   "type": "module",
+  "files": [
+    "lib/",
+    "src/"
+  ],
+  "exports": {
+    ".": {
+      "import": "./src/index.js",
+      "require": "./lib/index.cjs"
+    }
+  },
   "keywords": [
     "marked",
     "extension"
@@ -13,7 +24,7 @@
     "test": "jest --verbose",
     "test:cover": "jest --coverage",
     "lint": "eslint .",
-    "build": "rollup -c rollup.config.umd.js"
+    "build": "rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -39,7 +50,6 @@
     "@semantic-release/github": "^8.0.2",
     "@semantic-release/npm": "^8.0.3",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "babel-jest": "^27.3.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
