--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,9 +48,19 @@ jobs:
       - name: Lint ✨
         run: npm run lint
 
+  Build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: npm ci
+      - name: Build 🗜️
+        run: npm run build
+
   ############ Requires NPM_TOKEN in secrets ############
   # Release:
-  #   needs: [Test, Coverage, Lint]
+  #   needs: [Test, Coverage, Lint, Build]
   #   if: |
   #     github.ref == 'refs/heads/main' &&
   #     github.event.repository.fork == false
