--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,10 @@ jobs:
   #   steps:
   #     - name: Checkout Code
   #       uses: actions/checkout@v3
+  #     - name: Install Node
+  #       uses: dcodeIO/setup-node-nvm@master
+  #       with:
+  #         node-version: 'lts/*'
   #     - name: Install Dependencies
   #       run: npm ci
   #     - name: Build 🗜️
