--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '*'
+          check-latest: true
       - name: Install Dependencies
         run: npm ci
       - name: Run Tests 👩🏽‍💻
@@ -80,13 +81,7 @@ jobs:
   #     - name: Install Dependencies
   #       run: npm ci
   #     - name: Build 🗜️
-  #       run: |
-  #         npm run build
-  #         if ! git diff --quiet; then
-  #           git config --global user.email "<>"
-  #           git config --global user.name "CI Build"
-  #           git commit -am "🗜️ build [skip ci]"
-  #         fi
+  #       run: npm run build
   #     - name: Release 🎉
   #       env:
   #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
