--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     }
   },
   "scripts": {
+    "build": "rollup -c rollup.config.js",
+    "format": "eslint --fix",
+    "lint": "eslint",
     "test": "jest --verbose",
-    "test:cover": "jest --coverage",
-    "lint": "eslint .",
-    "build": "rollup -c rollup.config.js"
+    "test:cover": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -40,8 +41,9 @@
     "marked": "^13.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.9",
-    "@babel/preset-env": "^7.25.0",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@markedjs/eslint-config": "^1.0.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/git": "^10.0.1",
@@ -49,14 +51,11 @@
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.1",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.6.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0",
     "jest-cli": "^29.7.0",
     "marked": "^13.0.3",
-    "rollup": "^4.19.1",
+    "rollup": "^4.19.2",
     "semantic-release": "^24.0.0"
   }
 }
