--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "homepage": "https://github.com/markedjs/marked-extension-template#readme",
   "peerDependencies": {
-    "marked": "^13.0.3"
+    "marked": ">=14 <15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -54,7 +54,7 @@
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
     "jest-cli": "^29.7.0",
-    "marked": "^13.0.3",
+    "marked": "^14.0.0",
     "rollup": "^4.20.0",
     "semantic-release": "^24.0.0"
   }
