--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "marked-extension-template",
   "version": "0.0.0",
   "description": "marked extension template",
-  "main": "./lib/index.cjs",
+  "main": "./src/index.js",
   "module": "./src/index.js",
   "browser": "./lib/index.umd.js",
   "type": "module",
@@ -16,16 +16,18 @@
   ],
   "exports": {
     ".": {
-      "import": "./src/index.js",
-      "require": "./lib/index.cjs"
+      "default": "./src/index.js"
     }
   },
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "format": "eslint --fix",
     "lint": "eslint",
-    "test": "jest --verbose",
-    "test:cover": "jest --coverage"
+    "test": "node ./spec/test.config.js",
+    "test:cover": "node --experimental-test-coverage ./spec/test.config.js -- --cover",
+    "test:only": "node ./spec/test.config.js -- --only",
+    "test:only:update": "node --test-update-snapshots ./spec/test.config.js -- --only",
+    "test:update": "node --test-update-snapshots ./spec/test.config.js"
   },
   "repository": {
     "type": "git",
@@ -38,11 +40,9 @@
   },
   "homepage": "https://github.com/markedjs/marked-extension-template#readme",
   "peerDependencies": {
-    "marked": ">=15 <17"
+    "marked": ">=16 <17"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.7",
-    "@babel/preset-env": "^7.27.2",
     "@markedjs/eslint-config": "^1.0.13",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
@@ -50,10 +50,8 @@
     "@semantic-release/github": "^11.0.3",
     "@semantic-release/npm": "^12.0.2",
     "@semantic-release/release-notes-generator": "^14.0.3",
-    "babel-jest": "^30.0.2",
     "eslint": "^9.30.0",
     "globals": "^16.2.0",
-    "jest-cli": "^30.0.3",
     "marked": "^16.0.0",
     "rollup": "^4.44.1",
     "semantic-release": "^24.2.6"
