--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     }
   },
   "scripts": {
-    "build": "rollup -c rollup.config.js",
+    "build": "node esbuild.config.js",
     "format": "eslint --fix",
     "lint": "eslint",
     "test": "node ./spec/test.config.js",
@@ -50,10 +50,11 @@
     "@semantic-release/github": "^11.0.3",
     "@semantic-release/npm": "^12.0.2",
     "@semantic-release/release-notes-generator": "^14.0.3",
-    "eslint": "^9.30.0",
+    "esbuild": "^0.25.5",
+    "esbuild-plugin-umd-wrapper": "^3.0.0",
+    "eslint": "^9.30.1",
     "globals": "^16.2.0",
     "marked": "^16.0.0",
-    "rollup": "^4.44.1",
     "semantic-release": "^24.2.6"
   }
 }
