--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "build:types": "tsc",
     "format": "eslint --fix",
     "lint": "eslint",
-    "test": "npm run build:esbuild && node ./spec/test.config.js",
-    "test:cover": "npm run build:esbuild && node --experimental-test-coverage ./spec/test.config.js -- --cover",
-    "test:only": "npm run build:esbuild && node ./spec/test.config.js -- --only",
-    "test:only:update": "npm run build:esbuild && node --test-update-snapshots ./spec/test.config.js -- --only",
-    "test:update": "npm run build:esbuild && node --test-update-snapshots ./spec/test.config.js"
+    "test": "npm run build:esbuild && node --experimental-transform-types ./spec/test.config.js",
+    "test:cover": "npm run build:esbuild && node --experimental-transform-types --experimental-test-coverage ./spec/test.config.js -- --cover",
+    "test:only": "npm run build:esbuild && node --experimental-transform-types ./spec/test.config.js -- --only",
+    "test:only:update": "npm run build:esbuild && node --experimental-transform-types --test-update-snapshots ./spec/test.config.js -- --only",
+    "test:update": "npm run build:esbuild && node --experimental-transform-types --test-update-snapshots ./spec/test.config.js"
   },
   "repository": {
     "type": "git",
