--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
   "scripts": {
     "build": "npm run build:esbuild && npm run build:types",
     "build:esbuild": "node esbuild.config.js",
-    "build:types": "tsc",
+    "build:types": "tsc && dts-bundle-generator --export-referenced-types --project tsconfig.json -o lib/index.d.ts src/index.ts",
     "format": "eslint --fix",
     "lint": "eslint",
     "test": "npm run build:esbuild && node --experimental-transform-types ./spec/test.config.js",
     "test:cover": "npm run build:esbuild && node --experimental-transform-types --experimental-test-coverage ./spec/test.config.js -- --cover",
     "test:only": "npm run build:esbuild && node --experimental-transform-types ./spec/test.config.js -- --only",
     "test:only:update": "npm run build:esbuild && node --experimental-transform-types --test-update-snapshots ./spec/test.config.js -- --only",
+    "test:types": "npm run build:types && tsc --project tsconfig-test-types.json && attw -P --entrypoints . --profile esm-only",
     "test:update": "npm run build:esbuild && node --experimental-transform-types --test-update-snapshots ./spec/test.config.js"
   },
   "repository": {
@@ -47,6 +48,7 @@
     "marked": ">=16 <17"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.18.2",
     "@markedjs/eslint-config": "^1.0.13",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
@@ -54,6 +56,7 @@
     "@semantic-release/github": "^11.0.3",
     "@semantic-release/npm": "^12.0.2",
     "@semantic-release/release-notes-generator": "^14.0.3",
+    "dts-bundle-generator": "^9.5.1",
     "esbuild": "^0.25.5",
     "esbuild-plugin-umd-wrapper": "^3.0.0",
     "eslint": "^9.30.1",
