--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ permissions:
   contents: read
 
 jobs:
-
   Test:
     runs-on: ubuntu-latest
     steps:
@@ -18,7 +17,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v6
         with:
-          node-version: '*'
+          node-version: "*"
           check-latest: true
       - name: Install Dependencies
         run: npm ci
@@ -33,7 +32,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v6
         with:
-          node-version: 'lts/*'
+          node-version: "lts/*"
       - name: Install Dependencies
         run: npm ci
       - name: Run Tests 👩🏽‍💻
@@ -47,7 +46,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v6
         with:
-          node-version: 'lts/*'
+          node-version: "lts/*"
       - name: Install Dependencies
         run: npm ci
       - name: Run Tests 👩🏽‍💻
@@ -61,7 +60,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v6
         with:
-          node-version: 'lts/*'
+          node-version: "lts/*"
       - name: Install Dependencies
         run: npm ci
       - name: Lint ✨
@@ -75,7 +74,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v6
         with:
-          node-version: 'lts/*'
+          node-version: "lts/*"
       - name: Install Dependencies
         run: npm ci
       - name: Build 🗜️
@@ -84,8 +83,11 @@ jobs:
   ############ Requires NPM_TOKEN in secrets ############
   # Release:
   #   permissions:
-  #     contents: write
-  #     id-token: write
+  #     contents: write # to be able to publish a GitHub release
+  #     issues: write # to be able to comment on released issues
+  #     pull-requests: write # to be able to comment on released pull requests
+  #     id-token: write # to enable use of OIDC for trusted publishing and npm provenance
+  #     # see https://docs.npmjs.com/trusted-publishers to set up trusted publishing
   #   needs: [Test, Types, Coverage, Lint, Build]
   #   if: |
   #     github.ref == 'refs/heads/main' &&
@@ -97,7 +99,7 @@ jobs:
   #     - name: Install Node
   #       uses: actions/setup-node@v6
   #       with:
-  #         node-version: 'lts/*'
+  #         node-version: "lts/*"
   #     - name: Install Dependencies
   #       run: npm ci
   #     - name: Build 🗜️
@@ -105,5 +107,4 @@ jobs:
   #     - name: Release 🎉
   #       env:
   #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   #       run: npx semantic-release
